--- a/src/components/WelcomeForm.module.css
+++ b/src/components/WelcomeForm.module.css
@@ -5,10 +5,11 @@
     align-items: center;
     gap: 25px;
     padding: 24px;
-    border: 1px solid black;
+    border: 1px solid rgb(0, 0, 92);
     border-radius: 8px;
-    background-color: gray;
-    
+    background-color: #99d2ff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
 select {
@@ -24,4 +25,7 @@ select {
     border: 1px solid grey;
     border-radius: 8px;
     font-size: large;
+    background-color: rgb(249, 196, 204);
+    color: #008efb;
+    text-transform: uppercase;
 }
