--- a/src/components/layouts/PageContent.module.css
+++ b/src/components/layouts/PageContent.module.css
@@ -3,6 +3,21 @@
     flex-direction: column;
     gap: 32px;
     align-items: center;
-    padding-top: 32px;
+}
+
+.title {
+    color: #008efb;
+}
+
+.titleBackground {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 8px;
+    background-color: rgb(249, 196, 204); 
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 
