--- a/src/index.css
+++ b/src/index.css
@@ -10,5 +10,7 @@ a {
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: lightgray;
+    background-image: url('./assets/monochrome-banner-template-with-hands-people-solving-puzzle-riddle-quiz-tournament-knowledge-competition-intelligence-test-smart-game-elements-vector-illustration-line-art-style_198278-8719.jpg');
+    background-size: auto;
+    background-repeat: no-repeat;
 }
