--- a/src/components/WelcomeForm.module.css
+++ b/src/components/WelcomeForm.module.css
@@ -1,5 +1,9 @@
 .form {
-    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+/*     width: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -8,7 +12,7 @@
     border: 1px solid rgb(0, 0, 92);
     border-radius: 8px;
     background-color: #99d2ff;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 
 }
 
