--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
 }
 
 a {
@@ -18,4 +19,5 @@ body {
 
 button {
     font-family: 'Martian Mono', monospace;
+    transition: 0.15s ease-in-out;
 }
