--- a/src/components/layouts/ContentCard.module.css
+++ b/src/components/layouts/ContentCard.module.css
@@ -1,6 +1,7 @@
 .contentCard {
     width: fit-content;
     max-width: 800px;
+    margin: 0 auto;
     padding: 48px;
     border-radius: 8px;
     background-color: transparent;
