--- a/src/components/QuizResult.module.css
+++ b/src/components/QuizResult.module.css
@@ -39,7 +39,7 @@ p {
     grid-column: 1 / span 2;
 }
 
-.quiz-result-grid button {
+.restart-button {
     grid-column: 2;
     justify-self: flex-end;
     background-color: oklch(1 0 0 );
@@ -48,12 +48,12 @@ p {
     font-size: medium;
 }
 
-.quiz-result-grid button:hover {
+.restart-button:hover {
     background-color: oklch(1 0 0 / 0.1763);
     color: oklch(1 0 0);
 }
 
-.quiz-result-grid a {
+.config-button {
     display: flex;
     align-items: center;
     justify-self: flex-start;
@@ -63,8 +63,7 @@ p {
     transition: 0.15s ease-in-out;
 }
 
-.quiz-result-grid a:hover {
+.config-button:hover {
     border-radius: 8px;
     background-color: oklch(1 0 0 / 0.1763);
-
 }
